CREATE SCHEMA "spotify";

CREATE TABLE "spotify"."user" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "name" text NOT NULL,
  "spotify_id" text NOT NULL
);

CREATE TABLE "spotify"."playlist" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "spotify_id" text NOT NULL,
  "snapshot_id" text NOT NULL,
  "user_id" int
);

CREATE TABLE "spotify"."track" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "name" text NOT NULL,
  "spotify_id" text NOT NULL,
  "uri" text NOT NULL,
  "order" int NOT NULL,
  "playlist_id" int
);

CREATE TABLE "spotify"."update" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "user_id" int,
  "playlist_id" int,
  "action" text NOT NULL,
  "created_at" timestamp NOT NULL
);

ALTER TABLE "spotify"."playlist" ADD FOREIGN KEY ("user_id") REFERENCES "spotify"."user" ("id");

ALTER TABLE "spotify"."track" ADD FOREIGN KEY ("playlist_id") REFERENCES "spotify"."playlist" ("id");

ALTER TABLE "spotify"."update" ADD FOREIGN KEY ("user_id") REFERENCES "spotify"."user" ("id");

ALTER TABLE "spotify"."update" ADD FOREIGN KEY ("playlist_id") REFERENCES "spotify"."playlist" ("id");
